Implement BKHD, DATA, DIDX, HIRC (partially, only HIRCAction and HIRCSound)

--- a/.editorconfig
+++ b/.editorconfig
@@ -254,7 +254,7 @@ resharper_nested_ternary_style = autodetect
 resharper_never_outdent_pipe_operators = true
 resharper_new_line_before_enumerators = true
 resharper_normalize_tag_names = false
-resharper_no_indent_inside_elements = html,body,thead,tbody,tfoot
+resharper_no_indent_inside_elements = html, body, thead, tbody, tfoot
 resharper_no_indent_inside_if_element_longer_than = 200
 resharper_object_creation_when_type_evident = target_typed
 resharper_object_creation_when_type_not_evident = explicitly_typed
@@ -300,7 +300,7 @@ resharper_place_type_attribute_on_same_line = false
 resharper_place_type_constraints_on_same_line = true
 resharper_prefer_explicit_discard_declaration = false
 resharper_prefer_separate_deconstructed_variables_declaration = false
-resharper_preserve_spaces_inside_tags = pre,textarea
+resharper_preserve_spaces_inside_tags = pre, textarea
 resharper_qualified_using_at_nested_scope = false
 resharper_quote_style = doublequoted
 resharper_razor_prefer_qualified_reference = true
@@ -856,15 +856,15 @@ resharper_check_namespace_highlighting = warning
 resharper_class_cannot_be_instantiated_highlighting = warning
 resharper_class_can_be_sealed_global_highlighting = none
 resharper_class_can_be_sealed_local_highlighting = none
-resharper_class_never_instantiated_global_highlighting = suggestion
+resharper_class_never_instantiated_global_highlighting = none
 resharper_class_never_instantiated_local_highlighting = suggestion
 resharper_class_with_virtual_members_never_inherited_global_highlighting = suggestion
 resharper_class_with_virtual_members_never_inherited_local_highlighting = suggestion
 resharper_clear_attribute_is_obsolete_all_highlighting = warning
 resharper_clear_attribute_is_obsolete_highlighting = warning
-resharper_collection_never_queried_global_highlighting = warning
+resharper_collection_never_queried_global_highlighting = none
 resharper_collection_never_queried_local_highlighting = warning
-resharper_collection_never_updated_global_highlighting = warning
+resharper_collection_never_updated_global_highlighting = none
 resharper_collection_never_updated_local_highlighting = warning
 resharper_comment_typo_highlighting = none
 resharper_compare_non_constrained_generic_with_null_highlighting = none
@@ -1100,7 +1100,7 @@ resharper_meaningless_default_parameter_value_highlighting = warning
 resharper_member_can_be_internal_highlighting = none
 resharper_member_can_be_made_static_global_highlighting = hint
 resharper_member_can_be_made_static_local_highlighting = hint
-resharper_member_can_be_private_global_highlighting = suggestion
+resharper_member_can_be_private_global_highlighting = none
 resharper_member_can_be_private_local_highlighting = suggestion
 resharper_member_can_be_protected_global_highlighting = suggestion
 resharper_member_can_be_protected_local_highlighting = suggestion
@@ -1518,7 +1518,7 @@ resharper_unreal_header_tool_parser_error_highlighting = error
 resharper_unreal_header_tool_warning_highlighting = warning
 resharper_unsupported_required_base_type_highlighting = warning
 resharper_unused_anonymous_method_signature_highlighting = warning
-resharper_unused_auto_property_accessor_global_highlighting = warning
+resharper_unused_auto_property_accessor_global_highlighting = none
 resharper_unused_auto_property_accessor_local_highlighting = warning
 resharper_unused_field_compiler_highlighting = warning
 resharper_unused_import_clause_highlighting = warning
@@ -1527,22 +1527,22 @@ resharper_unused_local_function_compiler_highlighting = warning
 resharper_unused_local_function_highlighting = warning
 resharper_unused_local_function_parameter_highlighting = warning
 resharper_unused_local_function_return_value_highlighting = warning
-resharper_unused_member_global_highlighting = suggestion
-resharper_unused_member_hierarchy_global_highlighting = suggestion
+resharper_unused_member_global_highlighting = none
+resharper_unused_member_hierarchy_global_highlighting = none
 resharper_unused_member_hierarchy_local_highlighting = warning
-resharper_unused_member_in_super_global_highlighting = suggestion
+resharper_unused_member_in_super_global_highlighting = none
 resharper_unused_member_in_super_local_highlighting = warning
 resharper_unused_member_local_highlighting = warning
 resharper_unused_method_return_value_global_highlighting = suggestion
 resharper_unused_method_return_value_local_highlighting = warning
-resharper_unused_parameter_global_highlighting = suggestion
+resharper_unused_parameter_global_highlighting = none
 resharper_unused_parameter_in_partial_method_highlighting = warning
 resharper_unused_parameter_local_highlighting = warning
-resharper_unused_positional_parameter_compiler_highlighting = warning
+resharper_unused_positional_parameter_compiler_highlighting = none
 resharper_unused_tuple_component_in_return_value_highlighting = warning
-resharper_unused_type_global_highlighting = suggestion
+resharper_unused_type_global_highlighting = none
 resharper_unused_type_local_highlighting = warning
-resharper_unused_type_parameter_highlighting = warning
+resharper_unused_type_parameter_highlighting = none
 resharper_unused_variable_compiler_highlighting = warning
 resharper_unused_variable_highlighting = warning
 resharper_useless_binary_operation_highlighting = warning
